<resources>
    <string name="app_name">IMCApp</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="altura">altura</string>
    <string name="_120_cm">120 cm</string>
    <string name="height">height</string>
    <string name="peso">peso</string>
    <string name="edad">edad</string>
    <string name="calcular">Calcular</string>
    <string name="tu_resultado">Tu resultado</string>
    <string name="resultadoSobrepeso">Sobrepeso</string>
    <string name="resultadoInferior">Delgadez</string>
    <string name="descripcionInferior">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="resultadoOptimo">Óptimo</string>
    <string name="descripcionOptimo">Tu IMC se encuentra en el rango recomendable para tu peso y altura.</string>
    <string name="resultadoObesidad">Obesidad</string>
    <string name="descripcionObesidad">Estás bastante por encima de lo óptimo para tu peso y altura.</string>
    <string name="valorImc">27.46</string>
    <string name="descripcionSobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="re_calcular">re-calcular</string>
</resources>